--- a/src/components/App/app.css
+++ b/src/components/App/app.css
@@ -1,13 +1,40 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+#wrapper {
+  display: grid;
+  grid-template-columns: 100vw;
+  grid-template-rows: 10vh 80vh 10vh;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+.navbar {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  border-bottom: #555 solid ;
+}
+
+.navbar-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 50vw;
+  list-style: none;
+}
+
+.logo {
+  height: 9vh;
+  width: auto;
+}
+
+
+main {
+  border-bottom: #555 solid ;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #266bd7;
+  text-align: center;
 }
